--- a/ICG_4_lab.vcxproj
+++ b/ICG_4_lab.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="pipeline.cpp" />
     <ClCompile Include="shadow_map_fbo.cpp" />
     <ClCompile Include="shadow_map_technique.cpp" />
+    <ClCompile Include="skybox.cpp" />
     <ClCompile Include="technique.cpp" />
     <ClCompile Include="texture.cpp" />
   </ItemGroup>
@@ -158,6 +159,7 @@
     <ClInclude Include="pipeline.h" />
     <ClInclude Include="shadow_map_fbo.h" />
     <ClInclude Include="shadow_map_technique.h" />
+    <ClInclude Include="skybox.h" />
     <ClInclude Include="technique.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="util.h" />
